<resources>
    <string name="app_name">Petshop</string>


    //Text ProductList
    <string name="product1name">Comida para Gatos</string>
    <string name="product2name">Comida para Perros</string>
    <string name="product3name">Catnip</string>
    <string name="product4name">Hueso de Perro</string>
    <string name="product5name">Correa de Gato</string>
    <string name="product6name">Correa de Perro</string>
    <string name="product7name">Baño</string>
    <string name="product8name">Emergencia veterinaria</string>
    <string name="product9name">Cuidadores</string>

    <string name="descripcion1">La mejor y mas natural comida para gatos</string>
    <string name="descripcion2">La mejor y mas natural comida para perros</string>
    <string name="descripcion3">Tu gato volara de la felicidad</string>
    <string name="descripcion4">Te apuesto un hueso que tu perro lo amara</string>
    <string name="descripcion5">Elegante sofisticado... como tu gato</string>
    <string name="descripcion6">No volveras a salir corriendo scooby!!</string>
    <string name="descripcion7">Adios a las huellitas en el suelo</string>
    <string name="descripcion8">Estamos para los momentos mas dificiles</string>
    <string name="descripcion9">Sus deseos son ordenes MR.Garfield</string>

    //Text Main Screen
    <string name="welcome">Doggie Style</string>

    //Text Login
    <string name="loginEmail">Usuario/Correo</string>
    <string name="loginPass">Contraseña</string>
    <string name="loginNewUser">¿Aun no eres usuario?,Registrate acá.</string>
    <string name="loginBtn">Sign in</string>

    //Text Register
    <string name="registerEmail">Usuario/Correo</string>
    <string name="registerPassword">Contraseña</string>
    <string name="registerPasswordConfirm">Confirmar contraseña</string>
    <string name="registerCreatebtn">Crear Usuario</string>

    //Text Product List
    <string name="productList">Productos</string>

    //Text Form Add
    <string name="addproductform">New Product</string>
    <string name="searchbtnform">Search</string>
    <string name="updatebtnform">Update</string>
    <string name="nameAdd">Name</string>
    <string name="textDescriptionadd">Description</string>
    <string name="priceAdd">Price</string>
    <string name="addFormbtn">Add</string>
    <string name="deleteAddform">Delete</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>