<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FormAddProduct">

    <TextView
        android:id="@+id/addproductform"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/addproductform"
        android:textSize="45dp" />

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/idSearch"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/searchbtnform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/searchbtnform" />

            <Button
                android:id="@+id/updatebtnform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/updatebtnform" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageAddForm"
            android:layout_width="300dp"
            android:layout_height="300dp"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameAdd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/nameAdd"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editNameadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDescriptionadd"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/textDescriptionadd"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editDescriptionadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priceAdd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/priceAdd"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editPriceadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/addFormbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addFormbtn" />

            <Button
                android:id="@+id/deleteAddform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deleteAddform" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>